<resources>
    <string name="app_name">My Movie List</string>
    <string name="button_addMovie">Add Movie</string>
    <string name="hint_movieTitle">Movie Title</string>
    <string name="hint_movieGenre">Genre</string>
    <string name="hint_movieDirector">Director</string>
    <string name="menu_addMovie">Add</string>
    <string name="menu_cancelMovie">Cancel</string>
    <string name="enter_movie_title">Please Enter a Movie Title</string>
    <string name="enter_movie_genre">Please Enter a Movie Genre</string>
    <string name="enter_movie_poster">Please Add a Poster</string>
    <string name="save_movie">Save Movie</string>
    <string name="button_addImage">Add Poster</string>
    <string name="select_movie_image">Select Movie Poster</string>
    <string name="change_movie_image">Change Poster</string>
    <string name="movie_image">movie poster</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteMovie">Delete</string>
    <string name="search_title">Find a Movie</string>
</resources>